// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Form 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              Label
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form 2`] = `
Object {
  "config": Object {
    "errorMessage": "保存失败",
    "method": "post",
    "onSuccess": [Function],
    "successMessage": "保存成功",
  },
  "data": Object {
    "a": "123",
  },
  "method": "post",
  "url": "/api/xxx",
}
`;

exports[`Renderer:Form initApi 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Spinner-overlay"
        />
        <div
          class="a-Spinner a-Spinner--overlay"
        />
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              A
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              B
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--primary"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form sendOn:true 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Spinner-overlay"
        />
        <div
          class="a-Spinner a-Spinner--overlay"
        />
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              A
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              B
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--primary"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal is-error"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              A
            </span>
          </label>
          <div
            class="a-Form-control is-error a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
          <ul
            class="a-Form-feedback"
          >
            <li>
              a is wrong
            </li>
          </ul>
        </div>
        <div
          class="a-Form-item a-Form-item--normal is-error"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              B
            </span>
          </label>
          <div
            class="a-Form-control is-error a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
          <ul
            class="a-Form-feedback"
          >
            <li>
              b is wrong
            </li>
            <li>
              b is wrong 2
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 2`] = `
Object {
  "a": 1,
  "b": 2,
}
`;

exports[`Renderer:Form:onValidate 3`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              A
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              B
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 4`] = `
Object {
  "a": 1,
  "b": 2,
}
`;

exports[`Renderer:Form:remoteValidate 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Spinner-overlay"
        />
        <div
          class="a-Spinner a-Spinner--overlay"
        />
        <div
          class="a-Form-item a-Form-item--normal is-error"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              Label
            </span>
          </label>
          <div
            class="a-Form-control is-error a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="a-Form-feedback"
          >
            <li>
              这个字段服务端验证失败
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal is-error is-required"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              Label
              <span
                class="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="a-Form-control is-error a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="a-Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default is-disabled"
          disabled=""
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 2`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              Label
              <span
                class="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="a-Form-control a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div>
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 3`] = `
Object {
  "a": "123",
}
`;
